Aplicando sonar, terminando controller e testes de usecase e controller